--- a/src/app/styles.scoped.scss
+++ b/src/app/styles.scoped.scss
@@ -1,3 +1,15 @@
 header {
   font-weight: 700;
 }
+
+.link {
+  text-decoration: none;
+  color: #0D6EFD
+}
+
+.form_container {
+  padding: 16px;
+  border: 1px solid #E5E5E5;
+  border-radius: 5px;
+}
+
