--- a/src/styles.scoped.scss
+++ b/src/styles.scoped.scss
@@ -1,5 +1,17 @@
-header {
-  font-weight: 700;
+.header {
+  color: #212121;
+}
+
+.welcome__description {
+  height: 44px;
+  color: #616161;
+  text-align: center;
+  white-space: pre;
+}
+
+.welcome__img {
+  margin-top: 50px;
+  margin-bottom: 66px;
 }
 
 .link {
@@ -13,7 +25,7 @@ header {
   border-radius: 5px;
 }
 
-.logo {
+.logo__container {
   width: 100vw;
   height: 100vh;
   display: flex;
