--- a/src/styles.scoped.scss
+++ b/src/styles.scoped.scss
@@ -24,8 +24,9 @@
   font-size: 14px;
 }
 
-.form_container {
-  padding: 16px;
+.form__container {
+  margin-top: 20px;
+  padding: 5px 16px 30px 16px;
   border: 1px solid #E5E5E5;
   border-radius: 5px;
 }
@@ -37,6 +38,15 @@
   align-items: center;
   justify-content: center;
   background-color: #0D6EFD;
+}
+
+.welcome__link-grey {
+  color: #616161;
+}
+
+.checkbox__label {
+  font-size: 14px;
+  color: #212121;
 }
 
 
