type of carousel changed

--- a/src/styles.scoped.scss
+++ b/src/styles.scoped.scss
@@ -1,9 +1,7 @@
 .header {
   color: #212121;
-}
-
-.welcome__carousel {
-  position: relative;
+  font-weight: 500;
+  font-size: 32px;
 }
 
 .welcome__description {
@@ -11,11 +9,6 @@
   color: #616161;
   text-align: center;
   white-space: pre;
-}
-
-.welcome__img {
-  margin-top: 50px;
-  margin-bottom: 66px;
 }
 
 .welcome__link {
