SigninConfirm component added

--- a/src/styles.scoped.scss
+++ b/src/styles.scoped.scss
@@ -20,6 +20,14 @@
   background-color: #0D6EFD;
 }
 
+.sign_in_confirm__container {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .line {
   margin: 32px 72px;
   height: 0;
