--- a/src/styles.scoped.scss
+++ b/src/styles.scoped.scss
@@ -29,6 +29,24 @@
   justify-content: center;
 }
 
+.log_in_blocked__container {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.log_in_blocked__container-frame {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 40px 10px;
+  border: 1px solid #E5E5E5;
+  border-radius: 5px;
+}
+
 .line {
   margin: 32px 72px;
   height: 0;
