--- a/src/styles.scoped.scss
+++ b/src/styles.scoped.scss
@@ -1,3 +1,11 @@
+.container-center {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .welcome__description {
   height: 44px;
   text-align: center;
